--- a/healify/src/Components/DrumKit/Drumkit.module.css
+++ b/healify/src/Components/DrumKit/Drumkit.module.css
@@ -83,3 +83,11 @@
   margin: 10px;
   background-color: white;
 }
+.letter {
+  height: 5%;
+  width: 5%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 40px;
+}
