--- a/healify/src/Components/DrumKit/Drumkit.module.css
+++ b/healify/src/Components/DrumKit/Drumkit.module.css
@@ -66,7 +66,7 @@
   color: red;
 }
 
-.drum button {
+.drumBtn {
   outline: none;
   border: 10px solid #404b69;
   font-size: 5rem;
@@ -89,5 +89,13 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 40px;
+}
+.btn {
+  margin: auto;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.score {
+  color: white;
 }
