--- a/healify/src/Components/Events/Eventview.module.css
+++ b/healify/src/Components/Events/Eventview.module.css
@@ -1,7 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Road+Rage&display=swap");
+
 .Eventcontainer {
-  max-width: 1100px;
-  flex-basis: 500px;
-  max-height: 800px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
@@ -15,43 +14,38 @@
   text-align: initial;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  align-content: stretch;
   background-color: white;
-  min-width: 550px;
-  min-height: max-content;
+}
+
+.Eventcontainer div {
+  width: 100%;
 }
 
 .Eventcontainer3 {
-  max-width: 550;
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 25px;
   box-sizing: border-box;
-   background-color: rgb(250, 250, 250);
+  background-color: rgb(250, 250, 250);
   margin: auto;
   text-align: initial;
   display: flex;
-  flex-direction: row;
-  
-  
 }
 .Eventcontainer4 {
-  max-width: 550;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   padding: 25px;
-   background-color: rgb(250, 250, 250);
+  background-color: rgb(250, 250, 250);
   text-align: initial;
   display: flex;
   flex-direction: column;
-  
-  
 }
 .Eventcontainer2 {
- 
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
- box-sizing: border-box;
+  box-sizing: border-box;
   padding: 25px;
   top: 0px;
   bottom: 0px;
@@ -67,7 +61,6 @@
   left: 10px;
   top: 10px;
   color: rgb(255, 255, 255);
-  
 }
 .remove_underline {
   text-decoration: none;
@@ -78,15 +71,18 @@
 }
 .heading {
   text-align: center;
+  font: 65px "Road Rage";
   margin-bottom: 30px;
   padding-top: 10px;
 }
 .counter {
   text-align: center;
+  font: 35px "Road Rage";
+
   margin-top: 20px;
 }
 .EventBody {
-  height: 1500px;
+  /* height: 1500px; */
   background-color: rgb(243, 243, 247);
 }
 
@@ -211,7 +207,7 @@
 
 /* custom colors  */
 .scrollbar-primary::-webkit-scrollbar {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 .scrollbar-primary {
   scrollbar-color: #4285f4 #f5f5f5;
@@ -219,5 +215,34 @@
 .scrollbar-primary::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-  background-color: #4285F4;
+  background-color: #4285f4;
+}
+
+.img img {
+  width: 100%;
+}
+
+.firstSection {
+  width: 100%;
+  display: flex;
+  align-content: stretch;
+  justify-content: stretch;
+}
+
+.firstSection > div {
+  width: 45%;
+}
+
+.nullMargin {
+  margin: 0px;
+}
+
+@media screen and (max-width: 700px) {
+  .firstSection {
+    display: block;
+  }
+
+  .firstSection > div {
+    width: 100%;
+  }
 }
