--- a/healify/src/Components/Events/Eventview.module.css
+++ b/healify/src/Components/Events/Eventview.module.css
@@ -202,6 +202,8 @@
 .scrollbar::-webkit-scrollbar-thumb {
   border-radius: 5px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 1px 1px 6px black;
+
   background: rgba(0, 0, 0, 0.2);
 }
 
@@ -215,6 +217,7 @@
 .scrollbar-primary::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 1px 1px 6px black;
   background-color: #4285f4;
 }
 
