--- a/healify/src/Components/Events/Eventview.module.css
+++ b/healify/src/Components/Events/Eventview.module.css
@@ -19,7 +19,7 @@
   background-color: white;
 }
 
-.Eventcontainer div {
+.Eventcontainer > div {
   width: 100%;
 }
 
@@ -223,6 +223,7 @@
 
 .img img {
   width: 100%;
+  /* max-height: 500px; */
 }
 
 .firstSection {
