--- a/healify/src/Components/Milestones/MilestonesHome.module.css
+++ b/healify/src/Components/Milestones/MilestonesHome.module.css
@@ -125,6 +125,8 @@
 .read-or-hide {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
+  max-width: 100%;
+  word-wrap: break-word;
 }
 
 .viewBtn {
@@ -133,4 +135,9 @@
   padding: 2px;
   margin: 2px;
   text-align: center;
+}
+
+.text {
+  /* max-width: 100px; */
+  word-wrap: break-word;
 }
