--- a/healify/src/Components/Events/Eventview.module.css
+++ b/healify/src/Components/Events/Eventview.module.css
@@ -241,6 +241,23 @@
   margin: 0px;
 }
 
+.announcementSection {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.announcementSection h2 {
+  margin: 0px;
+}
+
+#addAnnBtn {
+  margin: 0px;
+  margin-left: auto;
+  justify-self: right;
+  word-wrap: break-word;
+}
+
 @media screen and (max-width: 700px) {
   .firstSection {
     display: block;
@@ -248,5 +265,9 @@
 
   .firstSection > div {
     width: 100%;
+  }
+
+  .announcementSection {
+    display: block;
   }
 }
