--- a/healify/src/Components/News/News.module.css
+++ b/healify/src/Components/News/News.module.css
@@ -82,7 +82,7 @@
 
 .news {
   margin: 1%;
-  max-width: 300px;
+  max-width: 400px;
   border: 1px solid lightgray;
   border-radius: 5px;
   display: flex;
@@ -149,4 +149,36 @@
 
 .page label {
   margin: 10px;
+}
+
+.paginationBttns {
+  width: 80%;
+  height: 40px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+.paginationBttns a {
+  padding: 10px;
+  margin: 8px;
+  border-radius: 5px;
+  border: 1px solid #2b2eff;
+  color: #2b2eff;
+  cursor: pointer;
+}
+
+.paginationBttns a:hover {
+  color: white;
+  background-color: #2b2eff;
+}
+
+.paginationActive a {
+  color: white;
+  background-color: #2b2eff;
+}
+
+.paginationDisabled a {
+  color: grey;
+  background-color: grey;
 }
