--- a/healify/src/App.css
+++ b/healify/src/App.css
@@ -1,11 +1,6 @@
-/* body {
-  color: #000;
-  overflow-x: hidden;
-  height: 100%;
-  background-image: linear-gradient(to right, #d500f9, #ffd54f);
-  background-repeat: no-repeat;
-} */
-
+body {
+  overflow-x: scroll;
+}
 input,
 textarea {
   background-color: #f3e5f5;
