--- a/healify/src/Components/Events/Events.module.css
+++ b/healify/src/Components/Events/Events.module.css
@@ -44,6 +44,43 @@
   justify-content: flex-end;
 }
 
+.fixedLink {
+  position: fixed;
+  padding: 10px;
+  bottom: 30px;
+  right: 30px;
+  z-index: 10;
+  width: min-content;
+  text-align: center;
+  background-color: #fbab7e;
+  background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
+
+  color: white;
+  border-radius: 50%;
+  font-weight: 900;
+  font-size: 1.2em;
+  border: 3px solid burlywood;
+}
+
+.fixedLink:hover {
+  animation: scaleUp 2s forwards;
+}
+
+@keyframes scaleUp {
+  0% {
+    backface-visibility: hidden;
+  }
+  50% {
+    background-color: #8bc6ec;
+    background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
+  }
+  100% {
+    transform: perspective(20px) scale3d(1, 1, 1) translateZ(2px);
+    background-color: #8ec5fc;
+    background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+  }
+}
+
 @media screen and (max-width: 880px) {
   .cardContainer {
     width: 45%;
@@ -53,5 +90,10 @@
 @media screen and (max-width: 530px) {
   .cardContainer {
     width: 90%;
+  }
+
+  .fixedLink {
+    bottom: 5px;
+    right: 5px;
   }
 }
