--- a/healify/src/Components/Home/About_us.module.css
+++ b/healify/src/Components/Home/About_us.module.css
@@ -1,37 +1,46 @@
 .aboutmain {
   font-family: Arial;
   padding: 20px;
-  background: #f1f1f1;
+  background: #e75e5e;
   overflow-x: scroll;
 }
 
+.aboutmain > h2 {
+  text-align: center;
+}
+
+.row > h2 {
+  margin-top: 10px;
+  text-align: center;
+}
+
+.h2 {
+  text-align: center;
+}
 /* Header/Blog Title */
 .header {
-  padding: 30px;
+  margin-top: 30px;
+  padding: 50px;
   font-size: 40px;
   text-align: center;
   background: white;
-}
-
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {
-  float: left;
-  width: 75%;
-}
-
-/* Right column */
-.rightcolumn {
-  float: left;
-  width: 25%;
-  padding-left: 20px;
+  box-shadow: inset 0 0 1px 10px rgb(54, 51, 51),
+    inset 0 0 1px 20px rgb(202, 124, 124), inset 0 0 1px 30px rgb(156, 206, 133);
 }
 
 /* Fake image */
 .fakeimg {
-  background-color: lightpink;
+  background-color: rgb(255, 255, 255);
   width: 100%;
   padding: 50px;
+  /* background-color: "lightpink"; */
+  color: slategray;
+  font-family: "sans-serif";
+  font-size: 18px;
+  line-height: 1.2;
+  border-radius: 0 15% 0 15%;
+  box-shadow: inset 0 0 1px 10px rgb(54, 51, 51),
+    inset 0 0 1px 20px rgb(202, 124, 124);
 }
 .image1 {
   width: 300px;
@@ -45,71 +54,6 @@
     padding:20px;
     height: 50px;
 } */
-/* Add a card effect for articles */
-.card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-  margin-top: 20px;
-}
-
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn,
-  .rightcolumn {
-    width: 100%;
-    padding: 0;
-  }
-}
-.aboutmain {
-  font-family: Arial;
-  padding: 20px;
-  background: #f1f1f1;
-}
-
-/* Header/Blog Title */
-.header {
-  padding: 30px;
-  font-size: 40px;
-  text-align: center;
-  background: white;
-}
-
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {
-  float: left;
-  width: 75%;
-}
-
-/* Right column */
-.rightcolumn {
-  float: left;
-  width: 25%;
-  padding-left: 20px;
-}
-
-/* Fake image */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
 /* Add a card effect for articles */
 .card {
   background-color: white;
