--- a/healify/src/App.css
+++ b/healify/src/App.css
@@ -77,3 +77,25 @@ a:hover {
     opacity: 0;
   }
 } */
+
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+}
+
+.next {
+  background-color: #04aa6d;
+  color: white;
+}
+
+.round {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+  border-radius: 50%;
+}
+
+.round:hover {
+  background-color: #ddd;
+  color: black;
+}
