--- a/healify/src/Components/Mailer/Email.module.css
+++ b/healify/src/Components/Mailer/Email.module.css
@@ -128,6 +128,11 @@ textarea {
   flex: 1 0 auto;
 }
 
+.messageBodyContainer {
+  display: flex;
+  align-items: center;
+}
+
 @media screen and (max-width: 880px) {
   .contact-box {
     grid-template-columns: 1fr;
