--- a/healify/src/Components/Home/About_us.module.css
+++ b/healify/src/Components/Home/About_us.module.css
@@ -4,7 +4,17 @@
   background: #e75e5e;
   overflow-x: scroll;
 }
-
+.heading {
+  margin-top: 30px;
+  padding: 40px;
+  font-size: 20px;
+  text-align: center;
+  background: white;
+  overflow-x: scroll;
+  overflow-x: scroll;
+  box-shadow: 
+    inset 0 0 1px 20px #e75e5e, inset 0 0 1px 30px lightsalmon;
+}
 .aboutmain > h2 {
   text-align: center;
 }
