--- a/healify/src/Components/News/News.module.css
+++ b/healify/src/Components/News/News.module.css
@@ -164,21 +164,21 @@
   margin: 8px;
   border-radius: 5px;
   border: 1px solid #2b2eff;
-  color: #2b2eff;
+  /* color: #2b2eff; */
   cursor: pointer;
 }
 
 .paginationBttns a:hover {
-  color: white;
-  background-color: #2b2eff;
+  color: rgb(0, 0, 0);
+  /* background-color: #2b2eff; */
 }
 
 .paginationActive a {
-  color: white;
-  background-color: #2b2eff;
+  color: rgb(0, 0, 0);
+  background-color: #a3a4e6;
 }
 
 .paginationDisabled a {
   color: grey;
-  background-color: grey;
+  /* background-color: grey; */
 }
