--- a/healify/src/App.css
+++ b/healify/src/App.css
@@ -119,3 +119,19 @@ a:hover {
   background-color: #ddd;
   color: black;
 }
+
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(5vh);
+  visibility: hidden;
+  transition: opacity 0.7s ease-out, transform 1.2s ease-out;
+  will-change: opacity, visibility;
+  display: flex;
+  /* max-width: 260px; */
+  flex-wrap: wrap;
+}
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
