--- a/healify/src/Components/Home/Home.module.css
+++ b/healify/src/Components/Home/Home.module.css
@@ -110,7 +110,7 @@
   gap: 80px;
   justify-content: space-evenly;
   flex-wrap: wrap;
-
+  flex-direction: row;
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 5px;
   text-align: center;
@@ -118,8 +118,12 @@
   backdrop-filter: blur(10px);
   padding: 20px 40px;
 }
-.mdbCustom a {
+.mdbCustom div {
   flex-basis: 275px;
+}
+
+.mdbCustom div a:hover {
+  color: black;
 }
 
 .blur {
