--- a/healify/src/Components/Profile/Profile.module.css
+++ b/healify/src/Components/Profile/Profile.module.css
@@ -26,6 +26,10 @@
 
 .profile-button:hover {
   background: #682773;
+  animation: move 5s infinite forwards;
+  animation-timing-function: cubic-bezier();
+  font-weight: bold;
+  color: #000;
 }
 
 .profile-button:focus {
@@ -47,7 +51,7 @@
   font-size: 12px;
   font-weight: bold;
   /* font-weight: 10; */
- font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   /* font-family: Georgia, "Times New Roman", Times, serif; */
 }
 
@@ -61,4 +65,21 @@
 .view {
   margin: 0px;
   margin-bottom: 2px;
+}
+
+@keyframes move {
+  0% {
+    /* transform: translateX(0px); */
+    transform: scale3d(1, 1, 1);
+  }
+  30%,
+  40% {
+    /* transform: translateX(0px); */
+    transform: scale3d(1.1, 1.1, 1);
+  }
+
+  70% {
+    /* transform: translateX(0px); */
+    transform: scale3d(1, 1, 1);
+  }
 }
