--- a/healify/src/Components/Home/Card.module.css
+++ b/healify/src/Components/Home/Card.module.css
@@ -8,7 +8,7 @@
   margin-bottom: 5px;
 }
 
-.imgSection:hover {
+/* .imgSection:hover {
   animation: imgBorder 1s 1 forwards;
 }
 
@@ -16,7 +16,7 @@
   100% {
     box-shadow: 2px 2px 7px 2px rgb(104, 97, 97);
   }
-}
+} */
 
 .textSection h2 {
   margin-top: 2rem;
@@ -43,7 +43,7 @@
   color: #272727;
   padding: 20px;
   align-self: stretch;
-  /* border-radius: 10px; */
+  border-radius: 10% 0 15% 0;
   background: rgb(255, 255, 255);
 }
 
@@ -55,7 +55,7 @@
 }
 .homecard:hover {
   box-shadow: inset 0 2px 20px 0 #ddcaca;
-  animation: translateUp 1s forwards;
+  animation: translateUp 4s infinite forwards;
 }
 
 .homecard:hover .arrow {
@@ -78,7 +78,21 @@
   0% {
     transform: translateY(0px);
   }
-  100% {
-    transform: translateY(-12px);
+  20% {
+    transform: translateY(-12px) rotateZ(3deg);
+  }
+  40% {
+    transform: scale(1.05) rotateZ(3deg);
+  }
+  60% {
+    transform: rotateZ(0deg) translateY(0px);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .imgSection img {
+    height: 100px;
+    width: 75%;
+    margin-bottom: 5px;
   }
 }
