--- a/healify/src/Components/Events/Events.module.css
+++ b/healify/src/Components/Events/Events.module.css
@@ -16,7 +16,7 @@
   margin: 10px;
   padding: 0px 10px;
 
-  width: 31%;
+  width: 22%;
 }
 
 .cardSubContainer {
@@ -82,6 +82,12 @@
   }
 }
 
+@media screen and (max-width: 1100px) {
+  .cardContainer {
+    width: 31%;
+  }
+}
+
 @media screen and (max-width: 880px) {
   .cardContainer {
     width: 45%;
@@ -96,5 +102,39 @@
   .fixedLink {
     bottom: 5px;
     right: 5px;
+  }
+}
+
+.cardContainer:hover {
+  animation: move 5s forwards;
+  animation-timing-function: cubic-bezier();
+  /* font-weight: bolder; */
+  color: #000;
+}
+
+.btnScale:hover {
+  animation: rotate 3s forwards;
+  animation-timing-function: cubic-bezier();
+  /* font-weight: bolder; */
+}
+@keyframes move {
+  30% {
+    /* transform: translateX(0px); */
+    transform: scale(1.05);
+  }
+
+  60% {
+    transform: scale(1);
+  }
+}
+
+@keyframes rotate {
+  30% {
+    /* transform: translateX(0px); */
+    transform: rotate(2deg);
+  }
+
+  60% {
+    transform: rotate(-2deg);
   }
 }
