--- a/healify/src/Components/Events/Eventview.module.css
+++ b/healify/src/Components/Events/Eventview.module.css
@@ -252,6 +252,7 @@
 }
 
 #addAnnBtn {
+  cursor: pointer;
   margin: 0px;
   margin-left: auto;
   justify-self: right;
@@ -269,5 +270,17 @@
 
   .announcementSection {
     display: block;
+  }
+}
+
+.hoverAnim:hover {
+  animation: rotate 3s forwards;
+  animation-timing-function: cubic-bezier();
+}
+
+@keyframes rotate {
+  30%,
+  60% {
+    transform: scale(1.1);
   }
 }
