--- a/healify/src/Components/Milestones/MilestonesHome.module.css
+++ b/healify/src/Components/Milestones/MilestonesHome.module.css
@@ -7,7 +7,6 @@
   width: 180px;
   box-shadow: 0px 3px 50px #a5a5a5;
   padding: 40px 100px;
- 
 }
 
 .card-wrapper {
@@ -18,7 +17,7 @@
   border-bottom: 1px solid gray;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
- transition: 0.5s ease;
+  transition: 0.5s ease;
   cursor: pointer;
   display: flex;
   flex-direction: column;
@@ -51,6 +50,7 @@
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   text-align: center;
+  overflow: visible;
 }
 .card-wrapper:hover {
   transform: scale(1.05);
