--- a/healify/src/Components/Home/Home.module.css
+++ b/healify/src/Components/Home/Home.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fuzzy%20Bubbles");
+
 .remove_underline {
   text-decoration: none;
 }
@@ -157,28 +159,13 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-@media screen and (max-width: 600px) {
-  .img h4 {
-    font-size: 20px;
-  }
-
-  .img img {
-    width: 100%;
-  }
-}
-
 .video {
-  height: 500px;
-}
-.topDivImg {
-  width: 50%;
-}
-.video {
+  max-width: 100%;
   background-color: transparent;
 }
 .topDiv {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   margin: auto;
   background: rgb(245, 241, 7);
@@ -189,11 +176,34 @@
   );
   padding: 2rem;
   text-align: center;
+  flex-wrap: wrap;
 }
 
 .topDiv p {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 1.3rem;
+  font-family: "Fuzzy Bubbles";
+  font-size: 1.3em;
   padding: 3%;
+  max-width: 48%;
+  /* font-weight: bolder; */
+  text-align: justify;
   color: #504f4b;
+}
+
+@media screen and (max-width: 600px) {
+  .img h4 {
+    font-size: 20px;
+  }
+
+  .img img {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .video {
+    max-width: 100%;
+  }
+  .topDiv p {
+    max-width: 100%;
+  }
 }
