--- a/healify/src/Components/Home/Home.module.css
+++ b/healify/src/Components/Home/Home.module.css
@@ -48,7 +48,6 @@
   background: rgb(3, 8, 4);
   display: flex;
   justify-content: center;
-
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 5px;
   text-align: center;
@@ -180,7 +179,7 @@
 }
 
 .topDiv p {
-  font-family: "Fuzzy Bubbles";
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 1.3em;
   padding: 3%;
   max-width: 48%;
@@ -193,7 +192,6 @@
   .img h4 {
     font-size: 20px;
   }
-
   .img img {
     width: 100%;
   }
