--- a/healify/src/Components/Quiz/QuizLanding.module.css
+++ b/healify/src/Components/Quiz/QuizLanding.module.css
@@ -1,6 +1,6 @@
 .quizBody {
   background-color: rgb(243, 243, 247);
-  font-weight: bolder;
+  /* font-weight: bolder; */
 }
 .topDiv {
   display: flex;
@@ -19,10 +19,17 @@
 
 .topDiv p {
   padding: 20px;
+  color: rgb(87, 78, 78);
+}
+.txt {
+  color: rgb(68, 58, 58);
+  padding-top: 15px;
 }
 .para1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 1.5rem;
+  margin-left: 5%;
+  margin-right: 10%;
 }
 .img {
   height: 25%;
@@ -55,6 +62,7 @@
   margin: auto;
   padding: 20px 20px;
   text-align: center;
+  color: rgb(90, 77, 77);
 }
 
 @media screen and (max-width: 720px) {
