--- a/healify/src/Components/Home/Card.module.css
+++ b/healify/src/Components/Home/Card.module.css
@@ -54,7 +54,7 @@
   background: rgba(0, 0, 255, 0);
 }
 .homecard:hover {
-  box-shadow: inset 0 2px 20px 0 #ddcaca;
+  /* box-shadow: inset 0 2px 20px 0 #ddcaca; */
   animation: translateUp 4s infinite forwards;
 }
 
@@ -79,7 +79,8 @@
     transform: translateY(0px);
   }
   20% {
-    box-shadow: inset 0 2px 20px 0 #ddcaca, 0 1px 10px 0 #000000;
+    /* box-shadow: inset 0 2px 20px 0 #ddcaca, 0 1px 10px 0 #000000; */
+    box-shadow: 0 1px 10px 0 #000000;
 
     transform: translateY(-12px);
   }
@@ -87,7 +88,8 @@
     transform: scale(1.05);
   }
   60% {
-    box-shadow: inset 0 2px 20px 0 #ddcaca, 0 2px 20px 0 #000000;
+    box-shadow: 0 2px 20px 0 #000000;
+    /* box-shadow: inset 0 2px 20px 0 #ddcaca, 0 2px 20px 0 #000000; */
     transform: translateY(0px) scale(1.1);
   }
 }
