--- a/healify/src/Components/Memes/Memes.module.css
+++ b/healify/src/Components/Memes/Memes.module.css
@@ -1,11 +1,9 @@
-.nsbtns
-{
-    padding: 10px;
-    margin: 30px;
-    width: 200px;
+.nsbtns {
+  padding: 10px;
+  margin: 30px;
+  width: 200px;
 }
 .carousel {
-  width:640px;
-  height:370px;
+  max-width: 60%;
   margin: auto;
-} 
+}
