Final Change Before  Deployment

--- a/healify/src/Components/Quiz/Quiz.module.css
+++ b/healify/src/Components/Quiz/Quiz.module.css
@@ -14,7 +14,7 @@
   text-align: initial;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   background-color: white;
 }
 .remove_underline {
